# jfc

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md
.code/agents/58/: exec-call_0aTAUebD9Svzmwc887sLP9b7.txt  exec-call_8NYW7zJbaCy3XZt1sfp3SX0r.txt  exec-call_bq81m8MMnpA2FXXunPXC8xzz.txt
.code/agents/6/: exec-call_7fay0DAm9IqYW55cDDafahPQ.txt
.github/workflows/: ci.yml
.jfc/: highlight-heights.json  tasks.json  tool-height-cache.json
.jfc/learn/pending/: 20260524_010710.json  20260524_022355.json  20260524_023527.json
.omo/drafts/: jfc-plugin-sdk-refactor.md
.omo/run-continuation/: ses_121fcc304ffesz3qU6f8k7FsoP.json
.sisyphus/drafts/: graph-context-engine.md
.sisyphus/notepads/omo-jfc-integration/: learnings.md
.sisyphus/plans/: omo-jfc-integration.md
apps/design-web/scripts/: browser-host.mjs
crates/context/src/: contributors.rs  lib.rs
crates/jfc/: Cargo.toml  jfc-handover.md
crates/jfc-agent/: Cargo.toml
crates/jfc-agent/src/: id.rs  message.rs  registry.rs  state.rs
crates/jfc-agents/: Cargo.toml
crates/jfc-agents/src/: lib.rs  lifecycle.rs  registry.rs
crates/jfc-anthropic-sdk/: Cargo.toml
crates/jfc-anthropic-sdk/src/: lib.rs  managed_agents.rs
crates/jfc-audit/examples/: refusal_flow.rs
crates/jfc-audit/src/: store.rs  suspicious_point.rs  taint.rs
crates/jfc-auth/src/: lib.rs
crates/jfc-bridge/src/: model.rs
crates/jfc-compress/src/: content_aware.rs  lib.rs  volatile.rs
crates/jfc-config/: Cargo.toml
crates/jfc-config/src/: catch_up_state.rs  claude_settings.rs  lib.rs  scheduled_tasks.rs
crates/jfc-core/: Cargo.toml
crates/jfc-core/src/: diff_compression.rs  hierarchical_compression.rs  lib.rs  message.rs  prompt_queue.rs  task.rs  task_store.rs  tool_input.rs  tool_input_snapshot.txt  tool_kind.rs
crates/jfc-core/tests/: tool_input_wire.rs  tool_kind_parse.rs  workspace_dependency_rules.rs
crates/jfc-daemon/: Cargo.toml
crates/jfc-daemon/src/: lib.rs  reconcile.rs  registry.rs  runtime.rs  scheduled_tasks.rs  shortcuts.rs  state.rs  svcs.rs  tests.rs  worker.rs
crates/jfc-dashboard/: Cargo.toml
crates/jfc-dashboard/examples/: smoke.rs
crates/jfc-dashboard/src/: dashboard.html  lib.rs  server.rs
crates/jfc-economy/: Cargo.toml
crates/jfc-economy/src/: auction.rs  (+13 more)
crates/jfc-engine/: Cargo.toml
crates/jfc-graph/: Cargo.toml
crates/jfc-learn/: Cargo.toml
crates/jfc-markdown/: Cargo.toml
crates/jfc-memory/: Cargo.toml
crates/jfc-plugin-host/: Cargo.toml
crates/jfc-plugin-host/src/: error.rs  host.rs  lib.rs  lifecycle.rs
crates/jfc-plugin-sdk/: Cargo.toml
crates/jfc-providers/: Cargo.toml
crates/jfc-session/: Cargo.toml
crates/jfc-ui/: Cargo.toml
crates/jfc-voice/: Cargo.toml
crates/jfc-voice/src/: audio.rs  backends.rs  config.rs  doctor.rs  lib.rs  neural_vad.rs  playback.rs  recorder.rs  vad.rs
docs/: remote-control.md
research/gemini-aistudio-js/: AAaGdf.beautified.js  CtkMdc.beautified.js  DUlrGe.beautified.js  FEyY2e.beautified.js  FaNExf.beautified.js  HlGYTd.beautified.js  Jn51xb.beautified.js  KJeCXd.beautified.js  M8DcDe.beautified.js  MvkJ5.beautified.js  O7x56e.beautified.js  QKzqef.beautified.js  QwVCeb.beautified.js  QzEnaf.beautified.js  S9crUb.beautified.js  YBh6Dc.beautified.js  YUh4Se.beautified.js  Zg7ntb.beautified.js
research/gemini-recon/: all_domains.txt  all_urls.txt  api_paths.txt  burp_urls.txt  domains.txt  endpoints.txt  rpc_endpoints.txt
(+608 files in other folders)
