[package]
name = "jfc-plugin-host"
version = "0.1.0"
edition = "2024"

[dependencies]
jfc-core = { path = "../jfc-core" }
jfc-plugin-sdk = { path = "../jfc-plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"

[lints]
workspace = true
