[package]
name = "jfc-voice"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "sync", "time", "io-util", "macros", "rt"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = { workspace = true }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "stream", "rustls", "multipart", "http2"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
