[package]
name = "jfc-voice"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "sync", "time", "io-util", "macros", "rt"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = { workspace = true }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "stream", "rustls", "multipart", "http2"] }
futures-util = "0.3"

# Optional neural VAD backend (Silero VAD v5 via ONNX Runtime). Off by default
# so the standard build stays dependency-light and the energy VAD remains the
# default; enable with `--features vad-neural`. The crate bundles the ~2MB
# Silero model and downloads a prebuilt ONNX Runtime at build time.
voice_activity_detector = { version = "0.2.1", optional = true }

[features]
default = []
# Enable the neural (Silero) VAD engine, selectable at runtime via
# JFC_VAD_ENGINE=neural (falls back to the energy VAD when unset/unavailable).
vad-neural = ["dep:voice_activity_detector"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
